<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AboutProgramActivity"
        android:padding="16dp">

    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_about_game"/>

    <TextView
            android:id="@+id/link_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/police_message"
            android:gravity="center_horizontal"
            />

    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_copy"
                android:gravity="end"
                android:layout_marginTop="16dp"/>

</LinearLayout>